FIxed a problem on small phones

--- a/css/index.css
+++ b/css/index.css
@@ -105,7 +105,7 @@ nav{
 				position: absolute;
 				right: 0px;
 				height: 92vh;
-				top: 8vh;
+				top: 12vh;
 				background-color:#232830;
 				display: flex;
 				flex-direction: column;
